@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: bugs.texi,v 0.9.2.18 2008/07/25 22:41:19 brian Exp $
+@c @(#) $Id: bugs.texi,v 0.9.2.19 2008/07/25 23:07:00 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,11 +53,18 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2008/07/25 22:41:19 $ by $Author: brian $
+@c Last Modified $Date: 2008/07/25 23:07:00 $ by $Author: brian $
 @c
 @c =========================================================================
 
 @table @code
+@item 019.  2008-07-25T22:41:47+0000
+
+When M_READ was being issued by the Stream Head downstream an srlock() imbalance in strsendmread()
+was causing soft-lockups on close for recent read-write lock implementations on CentOS 5 for x86_64.
+
+@emph{*fixed*} in @command{streams-0.9.2.4}
+
 @item 018.  2008-07-25T01:15:26+0000
 
 Previous fix didn't work too good: returning [EAGAIN] when hung-up on getmsg(), getpmsg(), read(),
@@ -75,8 +82,6 @@ The difficulty is that when waking up from a read sleep or when entering read th
 was generating an internal ESTRPIPE error.  This was altered so that ESTRPIPE is only returned
 during the hangup condition after the read queue has been tested and the caller is about to sleep on
 read.
-
-A test case needs to be generated for this case, but the fix has been implemented.
 
 @emph{*fixed*} in @command{streams-0.9.2.4}
 
