@@ -1,5 +1,8 @@
 2008-07-25  Brian Bidulock  <bidulock@openss7.org>
 
+	* doc/manual/bugs.texi: document bug 019
+	* src/modules/sth.c: fix for bug 019
+
 	* doc/manual/bugs.texi: document bug 018
 	* src/modules/sth.c: fix for bug 018
 	* src/test/test-streams.c: test cases for bug 018 and general
